<resources>
    <string name="app_name">Package Deliveries</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">Confirm a Delivery</string>
    <string name="enter">Enter a Package</string>
    <string name="welcome1">Welcome to the Packaging App!</string>
    <string name="welcome2">Select one of the options from below.</string>
    <string name="view">View Package By Customer Name</string>
    <string name="instructionsForm">Enter the following information and hit submit.</string>
    <string name="firstName">First Name: </string>
    <string name="middleInitial">Middle Initial: </string>
    <string name="lastName">Last Name: </string>
    <string name="roadLocation">Road: </string>
    <string name="phoneNumber">Phone Number: </string>
    <string name="doorNumber">Door Number: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>
    <string name="zipCode">Zip Code: </string>
    <string name="arrivalDate">Arrival Date: </string>
    <string name="TRKNumber">Tracking Number: </string>
    <string name="from">From Information</string>
    <string name="to">To Information</string>
    <string name="hintFN">Enter First Name</string>
    <string name="hintMI">Enter Middle Initial</string>
    <string name="hintLN">Enter Last Name</string>
    <string name="hintRoadLocation">Enter a Road Address</string>
    <string name="hintCity">Enter a City</string>
    <string name="hintDoorNumber">Enter a Door Number</string>
    <string name="hintState">Enter a State</string>
    <string name="hintZip">Enter a Zip Code</string>
    <string name="hintPhoneNumber">Enter a Phone Number</string>
    <string name="hintArrivalDate">Enter an Arrival Date</string>
    <string name="hintTRKNumber">Enter a Tracking Number</string>
</resources>
