<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Instructions on what to do for this form -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionsForm"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="12sp"/>

    <!-- Indicates which part of the form you are filling out -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        android:id="@+id/textView5"
        android:textSize="12sp"
        android:textAlignment="center"/>

    <!-- Prompt to enter first name of sender -->
    <EditText
        android:layout_width="260dp"
        android:inputType="text"
        android:hint="@string/hintFN"
        android:layout_height="34dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="54dp"
        android:textSize="12sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.54" />

    <!-- Prompt to enter middle initial of sender -->
    <EditText
        android:layout_width="259dp"
        android:layout_height="34dp"
        android:hint="@string/hintMI"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/editText"
        android:layout_marginTop="32dp"
        android:textSize="12sp"
        android:id="@+id/editText3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.544" />

    <!-- Prompt to enter last name of sender -->
    <EditText
        android:id="@+id/editText2"
        android:layout_width="258dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintLN"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText3"
        android:layout_marginTop="33dp"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.539" />

    <!-- Prompt to enter the road address of sender -->
    <EditText
        android:id="@+id/editText4"
        android:layout_width="256dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/hintRoadLocation"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Prompt to enter the city of sender -->
    <EditText
        android:id="@+id/editText5"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintCity"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/editText4"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.533" />

    <!-- Prompt to enter the state of sender -->
    <EditText
        android:id="@+id/editText6"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintState"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText5"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="252dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintZip"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText6"
        android:layout_marginTop="38dp" />

    <!-- Prompt to enter the zip code of sender -->
    <EditText
        android:id="@+id/editText8"
        android:layout_width="254dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintArrivalDate"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/editText7"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Prompt to enter the tracking number on the package -->
    <EditText
        android:id="@+id/editText9"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintTRKNumber"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText8"
        android:layout_marginTop="28dp" />

    <!-- Prompt to enter the Name of the organization which sent the package -->
    <EditText
        android:id="@+id/editText10"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText9"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.213" />

    <!-- Button that enables the user to continue to the Recipient Information screen -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueRecipient"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:onClick="onClickNext"/>

    <!-- Button that enables the user to return to the main screen -->
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText10"
        app:layout_constraintVertical_bias="0.094"
        android:onClick="onClickBack"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.846" />

</android.support.constraint.ConstraintLayout>